--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ ruff = "^0.12.9"
 black = "^25.1.0"
 mypy = "^1.17.1"
 pre-commit = "^4.3.0"
+pytest-cov = "^6.2.1"
 [tool.black]
 line-length = 88
 target-version = ["py311"]
