--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "pytest (>=8.4.1,<9.0.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "openai (>=1.100.2,<2.0.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)"
 ]
 
 
