--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,8 @@ OPENAI_MODEL=gpt-4o-mini
 OPENAI_TIMEOUT=15
 MAX_TOKENS=400
 TEMPERATURE=0.6
+
+# Storage
+STORE_BACKEND=redis   
+REDIS_URL=redis://localhost:6379/0
+REDIS_TTL_DAYS=7
