--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "openai (>=1.100.2,<2.0.0)",
-    "pydantic-settings (>=2.10.1,<3.0.0)"
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "redis (>=5.0)"
 ]
 
 
@@ -28,6 +29,7 @@ black = "^25.1.0"
 mypy = "^1.17.1"
 pre-commit = "^4.3.0"
 pytest-cov = "^6.2.1"
+fakeredis = ">=2.23"
 [tool.black]
 line-length = 88
 target-version = ["py311"]
